public/notebook.css
body {
  font-family: 'Helvetica Neue', sans-serif;
  color: #363636;
  background: #fff;
  margin: 0;
  padding: 0;
}

a {
  color: #2A64C7;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

.cursor {
  transition: all .15s ease-out;
}

.livebook-nav {
  background: #fdfdfd;
  height: 0;
  position: fixed;
  top: 0;
  max-width: 1200px;
  width: 100%;

  transition: all .2s ease-in;
}

.app-container {
  position: relative;
  margin: 0 auto;
  max-width: 1200px;
  padding-top: 4.2em;
}

.layout-container {
  margin: 0 auto;
  max-width: 1200px;
  overflow: auto;
  padding: 2em 1.7em;
}

.livebook-header {
  background: #363636;
  color: #fff;
  overflow: auto;
}

.livebook-logo,
.livebook-lede {
  float: left;
}

.livebook-logo {
  margin: 0 auto;
  opacity: 40em;
}

.livebook-lede {
  margin-left: 2em;
  max-width: 25em;
}

.livebook-lede h1 {
  font-family: serif;
  font-size: 2em;
  margin: .2em 0;
}

.livebook-lede h2 {
  color: #B1CD14;
  font-size: 1.2em;
  margin: .02em 0;
}

.livebook-lede p {
  margin: .2em 0;
  font-size: .9em;
  font-weight: 300;
}

.livebook-logo {
  height: 140px;
}

.gallery-container {
  overflow: auto;
}

.gallery-container h2 {
  color: #222;
  margin-top: 0;
}

.gallery-item {
  background: #fafafa;
  border: solid 1px #ccc;
  border-radius: 3px;
  box-sizing: border-box;
  float: left;
  height: 40%;
  margin-bottom: 1.2em;
  padding: 1em 1.1em 1.2em;
  width: 40%;
}

.gallery-item:nth-of-type(2n+1) {
  clear: left;
  margin-right: 1.2em;
}

.gallery-item--starter {
  background: transparent;
  border-style: dashed;
}

.gallery-item-header {
  display: flex;
  margin-bottom: .5em;
}

.gallery-item-logo {
  margin-right: 1em;
  align-self: center;
}

.gallery-item-title { }

.gallery-item-title h3 {
  margin: 0;
}

.gallery-item-title p {
  margin: .15em 0;
}

.gallery-item-footer {
  font-size: .8em;
  font-weight: 300;
}

.notebook {
  margin: 0 auto;
  max-width: 1000px;
  min-height: 400pt;
  width: 90%;
}

.notebook:empty {
  display: none;
}

.notebook h1,
.notebook h2,
.notebook h3 {
  font-weight: 700;
  margin: 0;
  padding: 0;
}

.notebook h1 {
  border-bottom: .1em solid rgba(0,0,0,0.125);
  font-size: 2.4em;
  margin-bottom: .4em;
  padding-bottom: .1em;
}

.notebook h2 {
  border-bottom: .07em solid rgba(0,0,0,0.125);
  font-size: 1.9em;
  margin-bottom: .4em;
  padding-bottom: .1em;
}

.notebook h3 {
  font-size: 1.4em;
  margin-bottom: .5em;
  padding-bottom: .15em;
}

.notebook p {
  font-size: 1em;
  line-height: 1.55;
  margin: 0;
  margin-bottom: 1em;
  text-align: justify;
}

.notebook .codewrap {
  border: .1em solid #ddd;
  border-radius: .15em;
  background: #eee;
  color: #222;
  font-size: .85em;
  padding: .8em .85em 1em .8em;
  position: relative;
  margin: 0;
  margin-bottom: -.1em;
}

.notebook .codewrap::after {
  background: #eee;
  border-bottom: .1em solid #ddd;
  border-right: .1em solid #ddd;
  content: " ";
  height: 18px;
  left: 50%;
  opacity: inherit;
  position: absolute;
  transform: translateX(-50%) rotate(45deg) translateY(7px);
  width: 18px;
}

.notebook .code {
  font-family: Menlo, monospace;
  overflow: hidden;
  white-space: pre;
}

.notebook table {
  background: #fff;
  border-collapse: collapse;
  margin: 0;
  width: 100%;
}

.notebook th,
.notebook td {
  border: .07em solid #ddd;
  text-align: left;
  line-height: 1.55;
}

.notebook th {
  background: #f8f8f8;
  font-size: .85em;
  padding: .55em .9em;
}

.notebook td {
  font-size: 1em;
  padding: .4em .8em;
}

.notebook .cell {
  margin-bottom: 1em;
  position: relative;
}

.notebook img {
  max-width: 100%;
}

.notebook hr {
  border: 0;
  height: .2em;
  background: #ccc;
}

.pyresult {
  background: #fff;
  border: 1px solid #ccc;
  border-bottom-left-radius: .15em;
  border-bottom-right-radius: .15em;
  font-family: Menlo, monospace;
  font-size: .85em;
  overflow: hidden;
  padding: .8em .85em 1em .85em;
  white-space: pre;
}

.pyresult::before {
  content: "→ ";
  display: inline-block;
  margin-top: -1em; /* lift it slightly above the x-height... kind of a magick number here, but looks nicer */
}

.pyresult-error {
  background-color: #FC212C;
  background-image: url('/bang.png');
  background-repeat: no-repeat;
  background-position: .75em .5em;
  background-size: 2em;

  box-shadow: inset .25em .5em .75em 0 rgba(0,0,0,0.1);
  color: #fff;
  padding-left: 3.5em;
}

.pyresult-error::before {
  content: '';
}

div.editor { /* !!! this is necessary specificity */
  display: none;
  position: absolute;
  z-index: 2;
}

div.ace_editor {
  box-sizing: border-box;
  font-size: .82em; /* slightly reduced font size relative to codecell becuase of font differences */
  margin: 0;
}

.ace-github .ace_gutter {
  background: #D6F717 !important;
}

div.ace_scroller {
  border: .1em solid #ddd;
  border-radius: .15em;
  /*padding: .8em .85em 1em .8em;*/ /* overflow gets in the way if we include padding D: */ ;
}

div.ace_content {
  /*padding: .8em .85em 1em .8em*/
}

div.ace_error-marker {
  background-color: #FC212C;
}

.menu {
  cursor: pointer;
  left: 1.3em;
  position: absolute;
  top: 1.3em;
  width: 5%;
}

.menu ul {
  font-size: .75em;
  list-style-type: none;
  padding: 0;
}

.menu li {
  padding: .15em .3em .2em .3em;
}

.menu li:hover {
  background: #eee;
  border-radius: .25em;
  color: #222;

  transform: scale(1.02, 1.02);
  transition: all .2s ease-in-out;
}

.menu img {
  height: 1.33em;
  opacity: 0.5;
  width: 1.33em;
}

.menu .menu-content {
  background: #fdfdfd;
  left: 0;
  opacity: 0;
  padding: .6em .6em .8em;
  position: absolute;
  top: 100%;
  visibility: hidden;

  transform: translateZ(0);
  transform: translateY(-10%);
  transition: all 0.5s;
}

.menu.active .menu-content {
  opacity: 1;
  transform: translateX(0%);
  visibility: visible;
}

.menu a {
  color: #363636;
  text-decoration: none;
}

.collaborators {
  position: absolute;
  right: .5em;
  top: .3em;
}

.collaborators ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.collaborators li {
  margin-top: 1em;
  position: relative;

  transition: all .3s ease-in-out;
}

.collaborators li:first-of-type {
  margin-top: .75em;
}

.collaborators li span {
  color: #565656;
  display: block;
  font-size: .5em;
  font-weight: 700;
  text-align: center;
  width: 100%;
}

.collaborators li.observer {
  text-align: center;
}

.collaborators li.here {
  opacity: 1;
}

.collaborators li.arriving,
.collaborators li.departing {
  opacity: 0.3;
  animation-duration: 0.7s;
  animation-name: pulse;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

.collaborators-name-change-form-wrap {
  padding: 0;
  position: absolute;
  right: 0;
  max-height: 40em;
  opacity: 1;
  overflow: inherit; 
  top: 55px; /* magic number */

  transition: all .5s ease-out;
}

.collaborators-name-change-form-wrap-hidden {
  max-height: 0;
  opacity: 0;
  overflow: hidden;
  transition: all .5s ease-in;
}

.collaborators-name-change-form {
  background: #ddd;
  border: solid .1em #ccc;
  border-radius: .25em;
  min-width: 12em;
  padding: .4em .5em .8em .5em;
  position: relative;
  z-index: 2;
}

.collaborators-name-change-form::after {
  background: #ddd;
  border-left: solid .1em #ccc;
  border-top: solid .1em #ccc;
  content: ' ';
  height: 15px;
  position: absolute;
  right: 1.08em;
  top: 0;
  transform: rotate(45deg) translateY(-10.8px);
  width: 15px;
}

.collaborators-name-change-form p {
  font-size: .85em;
  margin: .3em;
}

.collaborators-name-change-form input {
  width: 72%;
}

.collaborators-name-change-form button {
  display: inline-block;
  margin-left: .5em;
  padding-left: .4em;
  width: 20%;
}

.observer:first-of-type {
  cursor: pointer;
}

.observer:not(:first-of-type) {
  opacity: .82;
}

div.ace_editor {
  border: none;
}

/* specificity necessary to override injected styles */
div.ace-github,
div.ace-content {
  background: #eee;
}

#upload {
  box-sizing: border-box;
  border: 6pt dashed #ccc;
  border-radius: 24pt;
  width: 300pt;
  min-height: 200pt;
  margin: 20pt auto;
  padding: 16pt;
  padding-left: 32pt;
  padding-top: 28pt;
  background: rgba(0,0,0,0.03);
  color: #888;
  font-size: 16pt;
  font-weight: bold;
}
#upload ul {
  padding-left: 16pt;
}
#upload h1 {
  font-size: 28pt;
  color: #aaa;
  border: 0;
}
#upload li {
  list-style-type: none;
  padding-left: 28pt;
  margin-bottom: 16pt;
}
#upload li.ipynb {
  background: url('file-ipynb.png') left center no-repeat;
  background-size: 15pt;
}
#upload li.csv {
  background: url('file-csv.png') left center no-repeat;
  background-size: 15pt;
}

#upload.hover {
  border: 6pt dashed #B1CD14;
}

.text-green {
  color: #B1CD14;
}

.blur {
  -webkit-filter: blur(3px);
  filter: blur(3px);

  transition: -webkit-filter .2s ease-in-out,
              filter .2s ease-in-out;
}

/* C3 STYLES - move to separate file */
/* side note: yargh we are in specificity hell */
.notebook .c3-tooltip-container th {
  background: #363636;
}

.notebook-plot {
  background: white;
  margin: 0;
  margin-top: -1.05em; /* MAGICK NUMBER - used to obscure `null` return value */
}
.notebook-plot:empty {
  display: none;
}

@media only screen and (max-width: 800px) {

  .app-container {
    padding-top: 70px;
  }

  .livebook-nav {
    box-shadow: 0 1px 2px #ccc;
    height: 70px;
    position: fixed;
  }

  .collaborators {
    right: .5em;
    top: 0;
  }

  .collaborators ul {
    overflow: visible; /* solves the issue of name change form being hidden on mobile */
  }

  .collaborators li {
    float: left;
    margin-bottom: 0;
    margin-left: .25em;
    margin-top: 0;
    padding: .4em .5em .65em .5em;
  }

  .collaborators li:first-of-type {
    margin-top: 0;
  }

  .collaborators-name-change-form::after {
    height: 12px;
    right: 1.83em;
    top: .1em;
    width: 12px;

    transform: rotate(45deg) translateY(-11.8px);
  }

  .notebook {
    border: none;
    margin-left: 7%;
    margin-top: .6em;
    padding: 0;
    width: 91%;
  }
}

@keyframes pulse {
  from {
    opacity: 0.3;
  }
  to {
    opacity: 0.7;
  }
}

